# Motor_CAN_Tester

./: README.md  all_topics  command_topics  helper_info  helper_info.txt  steering_services  to_launch  traction_services  tricycle_services
motor_compEx/: CMakeLists.txt  README.md  package.xml
motor_compEx/launch/: robot_control.launch.py
motor_compEx/urdf/robot_controller/: robot_controller.urdf.xacro
motor_control/: CMakeLists.txt  package.xml
motor_control/config/: can_all_controller.yaml  can_controller.yaml  can_move_controller.yaml  can_pos_controller.yaml
motor_control/config/robot_control/: Kinco_FD_20250417_V1.2.eds  bus.yml  bus_all.yml  bus_move.yml  bus_pos.yml  bus_vel.yml  master.dcf  preprocessed.yml
motor_control/config/robot_control/bus_files/: bus_overall.yml  bus_tot_1.yml
motor_control/config/robot_control/bus_files_main/: bus_prev.yml
motor_control/config/robot_control/configs/tricycle/: master.dcf
motor_control/config/robot_control/extra_files/bus_files/: bus_traction.yml
motor_control/config/robot_control/extra_files/bus_files_main/: bus_pos.yml  bus_vel.yml
motor_control/config/robot_control/extra_files/edsFile_backup/: 4_5807873146673437325.eds
motor_control/encoder/: rel_to_abs_encode.yaml
motor_control/scripts/: fork_bias_node.py
motor_description/: CMakeLists.txt  package.xml
motor_description/urdf/: robot_parts_all.xacro  robot_parts_move.xacro  robot_parts_pos.xacro  robot_parts_vel.xacro  robot_real.urdf.xacro  robot_real_all.urdf.xacro  robot_real_move.urdf.xacro  robot_real_pos.urdf.xacro  robot_real_vel.urdf.xacro  robot_ros2_control.xacro  robot_ros2_control_all.xacro  robot_ros2_control_move.xacro  robot_ros2_control_pos.xacro  robot_ros2_control_vel.xacro
motor_example/: CMakeLists.txt  package.xml
motor_example/launch/: robot_control.launch.py  slave_launcher.launch.py
motor_example/urdf/: robot_controller.macro.xacro  robot_controller.ros2_control.xacro
motor_launch/: package.xml  setup.py
motor_launch/launch/: ros2_control.launch.py  ros2_control_all.launch.py  ros2_control_move.launch.py  ros2_control_pos.launch.py  ros2_control_vel.launch.py
src/motor_control/: CMakeLists.txt  package.xml
src/motor_launch/: setup.cfg  setup.py
(+23 files in other folders)
