<package format="3">
  <name>motor_description</name>
  <version>0.0.1</version>
  <description>Robot description package</description>

  <maintainer email="a.pahlevani1998@gmail.com">Ali Pahlevani</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
